# cpspg

./: .gitignore  LICENSE  README.md  cpspg.opam  dune-project  flake.nix
demos/bench/: Makefile  Parser.mly  main.ml
demos/calc/: ParserBase.mly  ParserPrec.mly  dune
demos/lua/: README.md  dune  main.ml
lib/: Ast.ml  Automaton.ml  AutomatonGen.ml  CodeGen.ml  CodeGenDot.ml  CodeGenMl.ml  Grammar.ml  GrammarGen.ml  Graphviz.ml  Lexer.mll  Parser.cpspg  Parser.ml  Parser.mly  Standard.mly  Types.ml  dune
test/: Broken.mly  Calc.ml  Calc.mly  Dragon.cpspg  Inline.ml  Inline.mly  Param.ml  Param.mly  common.ml  dune
test/bench/: .gitignore  Makefile  Parser.mly  main.ml
test/calc/: Lexer.mll  Parser.cpspg  Parser.ml  Parser.mly  ParserPrec.mly  calc.ml  dune  main.ml
test/lua/: Ast.ml  Lexer.mll  Parser.mly  dune  input.sh  main.ml
