(library
 (name cpspg))

(ocamllex
 (modules Lexer))

(rule
 (deps Parser.mly)
 (target Parser.cpspg.ml)
 (action
  (chdir
   %{workspace_root}
   (run cpspg --readable -o %{target} %{deps}))))

(rule
  (deps Standard.mly)
  (target Standard.ml)
  (action (with-stdout-to %{target}
    (progn
      (echo "let contents = {standard|")
      (cat %{deps})
      (echo "|standard}")))))

(rule
 (alias bootstrap)
 (action
  (diff Parser.ml Parser.cpspg.ml)))
