(executable
 (name calc))

(ocamllex Lexer)

(rule
 ; Change this rule to use a different parser
 (copy ParserPrec.ml Parser.ml))

(rule
 (deps ParserBase.mly)
 (target ParserBase.ml)
 (action
  (run cpspg -o %{target} %{deps})))

(rule
 (deps ParserPrec.mly)
 (target ParserPrec.ml)
 (action
  (run cpspg -o %{target} %{deps})))
