(executable
 (public_name calc)
 (name main))

(ocamllex Lexer)

(rule
 (copy ParserPrec.ml Parser.ml))

(rule
 (deps ParserBase.mly)
 (target ParserBase.ml)
 (action
  (run cpspg -o %{target} %{deps})))

(rule
 (deps ParserPrec.mly)
 (target ParserPrec.ml)
 (action
  (run cpspg -o %{target} %{deps})))
